# xmos-vocal-motion

./: .gitignore  CMakeLists.txt  MotorTest  MotorTest.c  MotorTest.c.xc  MotorTest.xc  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.docker/: docker-compose.yaml  entrypoint.sh
CMake/: Makefile
build_host/: Makefile
example/: README.md
scripts/: 99-xmos.rules  check_xmos_devices.sh  setup.ps1  setup_xmos_devices.sh
src/: CMakeLists.txt  main.cpp  main.xc  trace.vcd
src/MotorControl/: KinematicPoint.cpp  KinematicPoint.h  main.cpp  mainLookUpTable.cpp
src/arduino/TMCStepper-master/src/source/: CHOPCONF.cpp  COOLCONF.cpp  DRVCONF.cpp  DRVCTRL.cpp  DRVSTATUS.cpp  DRV_STATUS.cpp  ENCMODE.cpp  GCONF.cpp  IHOLD_IRUN.cpp  PWMCONF.cpp  SGCSCONF.cpp  SMARTEN.cpp  SW_MODE.cpp  SW_SPI.cpp  SW_SPI.h  TMC2130Stepper.cpp  TMC2130_bitfields.h  TMC2160Stepper.cpp  TMC2209_bitfields.h  TMC2660Stepper.cpp  TMC5130Stepper.cpp  TMC5160Stepper.cpp  TMCStepper.cpp  TMCStepper.h  spi.h  spi_master.c
src/arduino/drivers/TB6560/src/: TB6560.cpp
src/drivers/TB6560/: README.adoc  library.properties
src/drivers/TB6560/src/: TB6560.h
src/example/: _ntcgIKxOXz  main.cpp  main.xc  makefile  tb6560-example.c  tb6560-example.xc  test.xe  trace.gtkw
src/example/SeperatedExample/: CHOPCONF.cpp  TMC2130Stepper.cpp  TMC2160_bitfields.h  TMC2209Stepper.cpp  TMC2660Stepper.cpp  TMC2660_bitfields.h  TMC5130Stepper.cpp  TMC5160Stepper.cpp  TMCStepper.cpp  main.cpp  makefile  spi.h
src/examples/TMCStepper_SPI/: DRVCTRL.cpp  DRV_CONF.cpp  DRV_STATUS.cpp  GCONF.cpp  RAMP_STAT.cpp  SHORT_CONF.cpp  TMC2130Stepper.cpp  TMC2160Stepper.cpp  TMC5130Stepper.cpp  TMC5160Stepper.cpp  TMC5160_bitfields.h  TMCStepper.cpp  TMCStepper.h  main.cpp  makefile  spi.h  spi_master.c  spi_slave.c
src/lib/drivers/TB6560/: tb6560.cpp  tb6560.h  tb6560.xc
